css/project.css
main {
  display: flex;
  width: 100%;
  min-height: 100vh;
}

.section-left,
.section-right {
  width: 50%;
  padding: 2rem;
}

/* section left */
.section-left {
  display: flex;
  flex-direction: column;
  background-color: var(--color-sky-dark);
}

.section-left h1,
p,
li,
a {
  color: var(--color-grey-light);
}

.project-detail-title,
.project-detail-technologies,
.project-detail-description,
.project-detail-highlights-list {
  margin-bottom: 1.5rem;
}

.project-detail-technologies {
  display: flex;
  gap: 2rem;
  font-weight: 600;
  margin-bottom: 1.5rem;
  color: var(--color-grey-light);
}

.project-detail-description {
  max-width: 80%;
}

.project-detail-highlights-header {
  margin-bottom: 1rem;
  font-weight: 600;
}

.project-detail-links-header {
  margin-bottom: 1rem;
  font-weight: 600;
}

.project-detail-links {
  display: flex;
  gap: 2rem;
}

.home-link {
  display: flex;
  gap: 1rem;
  margin-bottom: 2rem;
}

/* section right */
.section-right {
  background-color: var(--color-grey);
}

.project-images {
  display: flex;
  justify-content: center;
}

.project-images img {
  width: 80%;
}

@media (max-width: 600px) {
  main {
    flex-direction: column;
    min-height: 100vh;
    height: 100%;
  }
  .section-left,
  .section-right {
    width: 100%;
  }
}

